--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div>
 		<button id="start">start</button>
-		<button id="stop" style="visibility: hidden;">stop</button>
+		<button id="stop" style="display: none;">stop</button>
 
 		<button id="step">step</button>
 		<button id="gliderGun">glider gun</button>
@@ -28,7 +28,7 @@
 	<canvas id="canvas"></canvas>
 
 	<br/><br/>
-	<textarea id="importExport" style="width: 700px; height: 250px;"></textarea>
+	<textarea id="importExport"></textarea>
 	<br/>
 	<button id="import">import</button>
 	<button id="export">export</button>
