--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 		<button id="randomize">randomize</button>
 		<button id="reset">reset</button>
 
-		size:
+		grid size:
 		<input id="gridWidth" type="number" min="4" max="10000" /> x
 		<input id="gridHeight" type="number" min="4" max="10000" />
+
+		cell size:
+		<input id="cellSize" type="number" min="1" max="100" />
 
 		interval (ms):
 		<input id="intervalTime" type="number" min="1" max="500" value="1" />
