--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
 		<button id="stop" style="display: none;">stop</button>
 
 		<button id="step">step</button>
-		<button id="gliderGun">glider gun</button>
 
 		<button id="randomize">randomize</button>
 		<button id="reset">reset</button>
+
+		pattern:
+		<select id="pattern">
+			<option value="">[select]</option>
+			<option>101</option>
+			<option>acorn</option>
+			<option>glider-gun</option>
+			<option>pulsar</option>
+		</select>
 
 		grid size:
 		<input id="gridWidth" type="number" min="4" max="10000" /> x
