added keyboard controls

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 	<div>
-		<button id="start">start</button>
-		<button id="stop" style="display: none;">stop</button>
+		<button id="start">Start</button>
+		<button id="stop" style="display: none;">Stop</button>
 
-		<button id="step">step</button>
+		<button id="step">sTep</button>
 
-		<button id="randomize">randomize</button>
-		<button id="reset">reset</button>
+		<button id="reset">Reset</button>
+		<button id="randomize">rAndomize</button>
 
 		pattern:
 		<select id="pattern">
