grid can now be flipped horizontally + vertically

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 	<div>
 		<button id="start">Start</button>
 		<button id="stop" style="display: none;">Stop</button>
-
 		<button id="step">sTep</button>
+		<button id="hflip">H-flip</button>
+		<button id="vflip">V-Flip</button>
 
 		<button id="reset">Reset</button>
 		<button id="randomize">rAndomize</button>
