--- a/index.html
+++ b/index.html
@@ -18,15 +18,6 @@
 		<button id="reset">Reset</button>
 		<button id="randomize">rAndomize</button>
 
-		pattern:
-		<select id="pattern">
-			<option value="">[select]</option>
-			<option>101</option>
-			<option>acorn</option>
-			<option>glider-gun</option>
-			<option>pulsar</option>
-		</select>
-
 		grid size:
 		<input id="gridWidth" type="number" min="4" max="10000" /> x
 		<input id="gridHeight" type="number" min="4" max="10000" />
@@ -36,6 +27,16 @@
 
 		interval (ms):
 		<input id="intervalTime" type="number" min="1" max="500" value="1" />
+		<br/>
+
+		load pattern:
+		<button class="pattern">101</button>
+		<button class="pattern">acorn</button>
+		<button class="pattern">canada-goose</button>
+		<button class="pattern">copperhead</button>
+		<button class="pattern">glider-gun</button>
+		<button class="pattern">pentadecathlon-synthesis</button>
+		<button class="pattern">pulsar</button>
 	</div>
 	<canvas id="canvas"></canvas>
 
