grid can now be rotated

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<button id="step">sTep</button>
 		<button id="hflip">H-flip</button>
 		<button id="vflip">V-Flip</button>
+		<button id="rotate">rOtate</button>
 
 		<button id="reset">Reset</button>
 		<button id="randomize">rAndomize</button>
