--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Game of Life</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="style.css" type="text/css">
-	<script src="game.js"></script>
+	<script type="module" src="src/app.js"></script>
 </head>
 <body>
 	<div id="controls">
