added favicon tag to header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Game of Life</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="style.css" type="text/css">
 	<script type="module" src="src/app.js"></script>
 </head>
