refactoring: made Grid fully independent of canvas, DOM + window (preparation for using webworker)

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 		<button id="start">Start</button>
 		<button id="stop" style="display: none;">Stop</button>
 		<button id="step">sTep</button>
+		<button id="reset">Reset</button>
 		<button id="hflip">H-flip</button>
 		<button id="vflip">V-Flip</button>
 		<button id="rotate">rOtate</button>
-
-		<button id="reset">Reset</button>
 		<button id="randomize">rAndomize</button>
+
+		<button id="up">↑</button>
+		<button id="down">↓</button>
+		<button id="left">←</button>
+		<button id="right">→</button>
 
 		grid size:
 		<input id="gridWidth" type="number" min="4" max="10000" /> x
