added a checkbox that allows resetting the grid before loading a pattern

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		<button class="pattern">glider-gun</button>
 		<button class="pattern">pentadecathlon-synthesis</button>
 		<button class="pattern">pulsar</button>
+		<input type="checkbox" id="resetBeforeLoad" />reset
 	</div>
 	<br/>
 	<div id="benchmark">
