can now import + export RLE

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 	<textarea id="importExport"></textarea>
 	<br/>
 	<button id="import">import</button>
-	<button id="export">export</button>
+	<button id="exportJSON">export JSON</button>
+	<button id="exportRLE">export RLE</button>
 </body>
 </html>
