converted pattern files to RLE + added some more

--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
 	<div id="patterns">
 		load pattern:
 		<button class="pattern">101</button>
+		<button class="pattern">2-engine-cordership</button>
 		<button class="pattern">acorn</button>
+		<button class="pattern">big-glider</button>
+		<button class="pattern">buckaroo</button>
 		<button class="pattern">canada-goose</button>
 		<button class="pattern">copperhead</button>
+		<button class="pattern">fireship</button>
 		<button class="pattern">glider-gun</button>
 		<button class="pattern">pentadecathlon-synthesis</button>
 		<button class="pattern">pulsar</button>
