--- a/index.html
+++ b/index.html
@@ -46,8 +46,16 @@
 		<button class="pattern">copperhead</button>
 		<button class="pattern">fireship</button>
 		<button class="pattern">glider-gun</button>
+		<button class="pattern">new-gun</button>
+		<button class="pattern">new-gun-2</button>
 		<button class="pattern">pentadecathlon-synthesis</button>
+		<button class="pattern">period-50-glidergun</button>
+		<button class="pattern">period-90-glidergun</button>
+		<button class="pattern">period-92-glidergun</button>
+		<button class="pattern">period-256-glidergun</button>
+		<button class="pattern">period-690-glidergun</button>
 		<button class="pattern">pulsar</button>
+		<button class="pattern">vacuum-gun</button>
 		<input type="checkbox" id="resetBeforeLoad" />reset
 	</div>
 	<br/>
