--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			</div>
 			<br/>
 
-			grid size:
 			<span>
+				grid:
 				<input id="gridWidth" type="number" min="4" max="10000"/> x
 				<input id="gridHeight" type="number" min="4" max="10000"/>
 			</span>
@@ -37,7 +37,7 @@
 
 			<span>
 				<label for="cellSize">cell size:</label>
-				<input id="cellSize" type="number" min="1" max="100"/>
+				<span><input id="cellSize" type="number" min="1" max="100"/> px</span>
 			</span>
 			<br/>
 
@@ -84,6 +84,16 @@
 			<span>
 				<input type="checkbox" id="resetBeforeLoad"/>
 				<label for="resetBeforeLoad">reset</label>
+			</span>
+			<br/>
+
+			<span>
+				<label for="offsetX">x:</label>
+				<input type="number" id="offsetX" value="0"/>
+			</span>
+			<span>
+				<label for="offsetY">y:</label>
+				<input type="number" id="offsetY" value="0"/>
 			</span>
 		</div>
 		<br/>
