--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 			<span>load pattern:</span>
 			<button class="pattern">101</button>
 			<button class="pattern">2-engine-cordership</button>
+			<button class="pattern">3-engine-cordership</button>
+			<button class="pattern">4-engine-cordership</button>
+			<button class="pattern">5-engine-cordership</button>
 			<button class="pattern">acorn</button>
 			<button class="pattern">big-glider</button>
 			<button class="pattern">buckaroo</button>
@@ -66,6 +69,9 @@
 			<button class="pattern">copperhead</button>
 			<button class="pattern">fireship</button>
 			<button class="pattern">glider-gun</button>
+			<button class="pattern">glider-train</button>
+			<button class="pattern">hammerhead</button>
+			<button class="pattern">lobster</button>
 			<button class="pattern">new-gun</button>
 			<button class="pattern">new-gun-2</button>
 			<button class="pattern">pentadecathlon-synthesis</button>
@@ -74,7 +80,9 @@
 			<button class="pattern">period-92-glidergun</button>
 			<button class="pattern">period-256-glidergun</button>
 			<button class="pattern">period-690-glidergun</button>
+			<button class="pattern">pufferfish-synthesis</button>
 			<button class="pattern">pulsar</button>
+			<button class="pattern">space-rake</button>
 			<button class="pattern">vacuum-gun</button>
 			<br/>
 
