--- a/index.html
+++ b/index.html
@@ -8,110 +8,114 @@
 		<script type="module" src="src/app.js"></script>
 	</head>
 	<body>
-		<div id="controls">
-			<button id="start">Start</button>
-			<button id="stop" style="display: none;">Stop</button>
-			<button id="step">sTep</button>
-			<button id="reset">Reset</button>
-			<button id="hflip">H-flip</button>
-			<button id="vflip">V-Flip</button>
-			<button id="rotate">rOtate</button>
-			<button id="randomize">rAndomize</button>
-			<br/>
-
-			<div id="arrows">
-				<button id="up" class="arrowButton">↑</button>
+		<form name="settings" action="javascript:void(0);">
+			<div id="controls">
+				<button id="start">Start</button>
+				<button id="stop" style="display: none;">Stop</button>
+				<button id="step">sTep</button>
+				<button id="reset">Reset</button>
+				<button id="hflip">H-flip</button>
+				<button id="vflip">V-Flip</button>
+				<button id="rotate">rOtate</button>
+				<button id="randomize">rAndomize</button>
 				<br/>
-				<button id="left" class="arrowButton">←</button>
-				<button id="down" class="arrowButton">↓</button>
-				<button id="right" class="arrowButton">→</button>
+
+				<div id="arrows">
+					<button id="up" class="arrowButton">↑</button>
+					<br/>
+					<button id="left" class="arrowButton">←</button>
+					<button id="down" class="arrowButton">↓</button>
+					<button id="right" class="arrowButton">→</button>
+				</div>
+				<br/>
+
+				<span>
+					grid:
+					<input id="gridWidth" type="number" min="4" max="10000"/> x
+					<input id="gridHeight" type="number" min="4" max="10000"/>
+				</span>
+				<br/>
+
+				<span>
+					<label for="cellSize">cell size:</label>
+					<span><input id="cellSize" type="number" min="1" max="100"/> px</span>
+				</span>
+				<br/>
+
+				<span>
+					<label for="intervalTime">interval:</label>
+					<span><input id="intervalTime" type="number" min="1" max="500" value="1"/> ms</span>
+				</span>
+				<br/>
+
+				<label for="benchmarkSteps">Benchmark:</label>
+				<span>
+					<button id="runBenchmark">run</button>
+					<input id="benchmarkSteps" type="number" min="1" value="1000"/>
+					steps
+				</span>
+				<span>and take the time</span>
+				<br/>
+
+				<span>load pattern:</span>
+				<button class="pattern">101</button>
+				<button class="pattern">2-engine-cordership</button>
+				<button class="pattern">3-engine-cordership</button>
+				<button class="pattern">4-engine-cordership</button>
+				<button class="pattern">5-engine-cordership</button>
+				<button class="pattern">acorn</button>
+				<button class="pattern">big-glider</button>
+				<button class="pattern">buckaroo</button>
+				<button class="pattern">canada-goose</button>
+				<button class="pattern">copperhead</button>
+				<button class="pattern">fireship</button>
+				<button class="pattern">glider-gun</button>
+				<button class="pattern">glider-train</button>
+				<button class="pattern">hammerhead</button>
+				<button class="pattern">lobster</button>
+				<button class="pattern">new-gun</button>
+				<button class="pattern">new-gun-2</button>
+				<button class="pattern">pentadecathlon-synthesis</button>
+				<button class="pattern">period-50-glidergun</button>
+				<button class="pattern">period-90-glidergun</button>
+				<button class="pattern">period-92-glidergun</button>
+				<button class="pattern">period-256-glidergun</button>
+				<button class="pattern">period-690-glidergun</button>
+				<button class="pattern">pufferfish-synthesis</button>
+				<button class="pattern">pulsar</button>
+				<button class="pattern">space-rake</button>
+				<button class="pattern">vacuum-gun</button>
+				<br/>
+
+				<span>
+					<input type="checkbox" id="resetBeforeLoad"/>
+					<label for="resetBeforeLoad">reset</label>
+				</span>
+				<br/>
+
+				<span>
+					<label for="offsetX">x:</label>
+					<input type="radio" name="offsetXcenter" value="0" checked /><input type="number" id="offsetX" value="0"/>
+					<input type="radio" name="offsetXcenter" value="1" />center
+				</span>
+				<span>
+					<label for="offsetY">y:</label>
+					<input type="radio" name="offsetYcenter" value="0" checked /><input type="number" id="offsetY" value="0"/>
+					<input type="radio" name="offsetYcenter" value="1" />center
+				</span>
 			</div>
 			<br/>
 
-			<span>
-				grid:
-				<input id="gridWidth" type="number" min="4" max="10000"/> x
-				<input id="gridHeight" type="number" min="4" max="10000"/>
-			</span>
-			<br/>
+			<div id="main">
+				<canvas id="canvas"></canvas>
 
-			<span>
-				<label for="cellSize">cell size:</label>
-				<span><input id="cellSize" type="number" min="1" max="100"/> px</span>
-			</span>
-			<br/>
-
-			<span>
-				<label for="intervalTime">interval:</label>
-				<span><input id="intervalTime" type="number" min="1" max="500" value="1"/> ms</span>
-			</span>
-			<br/>
-
-			<label for="benchmarkSteps">Benchmark:</label>
-			<span>
-				<button id="runBenchmark">run</button>
-				<input id="benchmarkSteps" type="number" min="1" value="1000"/>
-				steps
-			</span>
-			<span>and take the time</span>
-			<br/>
-
-			<span>load pattern:</span>
-			<button class="pattern">101</button>
-			<button class="pattern">2-engine-cordership</button>
-			<button class="pattern">3-engine-cordership</button>
-			<button class="pattern">4-engine-cordership</button>
-			<button class="pattern">5-engine-cordership</button>
-			<button class="pattern">acorn</button>
-			<button class="pattern">big-glider</button>
-			<button class="pattern">buckaroo</button>
-			<button class="pattern">canada-goose</button>
-			<button class="pattern">copperhead</button>
-			<button class="pattern">fireship</button>
-			<button class="pattern">glider-gun</button>
-			<button class="pattern">glider-train</button>
-			<button class="pattern">hammerhead</button>
-			<button class="pattern">lobster</button>
-			<button class="pattern">new-gun</button>
-			<button class="pattern">new-gun-2</button>
-			<button class="pattern">pentadecathlon-synthesis</button>
-			<button class="pattern">period-50-glidergun</button>
-			<button class="pattern">period-90-glidergun</button>
-			<button class="pattern">period-92-glidergun</button>
-			<button class="pattern">period-256-glidergun</button>
-			<button class="pattern">period-690-glidergun</button>
-			<button class="pattern">pufferfish-synthesis</button>
-			<button class="pattern">pulsar</button>
-			<button class="pattern">space-rake</button>
-			<button class="pattern">vacuum-gun</button>
-			<br/>
-
-			<span>
-				<input type="checkbox" id="resetBeforeLoad"/>
-				<label for="resetBeforeLoad">reset</label>
-			</span>
-			<br/>
-
-			<span>
-				<label for="offsetX">x:</label>
-				<input type="number" id="offsetX" value="0"/>
-			</span>
-			<span>
-				<label for="offsetY">y:</label>
-				<input type="number" id="offsetY" value="0"/>
-			</span>
-		</div>
-		<br/>
-
-		<div id="main">
-			<canvas id="canvas"></canvas>
-
-			<br/><br/>
-			<button id="import">import</button>
-			<button id="exportJSON">export JSON</button>
-			<button id="exportRLE">export RLE</button>
-			<br/>
-			<textarea id="importExport"></textarea>
-		</div>
+				<br/><br/>
+				<button id="import">import</button>
+				<button id="exportJSON">export JSON</button>
+				<button id="exportRLE">export RLE</button>
+				<br/>
+				<textarea id="importExport"></textarea>
+			</div>
+		</form>
 	</body>
 </html>
