--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
 				<span>
 					<label for="offsetXcenter0" onclick="document.getElementById('offsetXcenter0').checked = true">
 						<label for="offsetX">x:</label>
-						<input type="radio" name="offsetXcenter" id="offsetXcenter0" value="0" checked /><input type="number" id="offsetX" value="0"/>
+						<input type="radio" name="offsetXcenter" id="offsetXcenter0" value="" checked /><input type="number" id="offsetX" value="0"/>
 					</label>
-					<input type="radio" name="offsetXcenter" id="offsetXcenter1" value="1" /><label for="offsetXcenter1">center</label>
+					<input type="radio" name="offsetXcenter" id="offsetXcenter1" value="true" /><label for="offsetXcenter1">center</label>
 				</span>
 				<span>
 					<label for="offsetYcenter0" onclick="document.getElementById('offsetYcenter0').checked = true">
 						<label for="offsetY">y:</label>
-						<input type="radio" name="offsetYcenter" id="offsetYcenter0" value="0" checked /><input type="number" id="offsetY" value="0"/>
+						<input type="radio" name="offsetYcenter" id="offsetYcenter0" value="" checked /><input type="number" id="offsetY" value="0"/>
 					</label>
-					<input type="radio" name="offsetYcenter" id="offsetYcenter1" value="1" /><label for="offsetYcenter1">center</label>
+					<input type="radio" name="offsetYcenter" id="offsetYcenter1" value="true" /><label for="offsetYcenter1">center</label>
 				</span>
 			</div>
 			<br/>
