add turtle pattern

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 				<button class="pattern">pufferfish-synthesis</button>
 				<button class="pattern">pulsar</button>
 				<button class="pattern">space-rake</button>
+				<button class="pattern">turtle</button>
 				<button class="pattern">vacuum-gun</button>
 				<br/>
 
