feat: new "misc" folder for other patterns

--- a/public/index.html
+++ b/public/index.html
@@ -142,26 +142,29 @@
 					<button class="pattern" value="5-engine-cordership">5-engine</button>
 				</div>
 
-				<button class="pattern">101</button>
-				<button class="pattern">acorn</button>
-				<button class="pattern">big-glider</button>
-				<button class="pattern">buckaroo</button>
-				<button class="pattern">canada-goose</button>
-				<button class="pattern">copperhead</button>
-				<button class="pattern">fireship</button>
-				<button class="pattern">glider-gun</button>
-				<button class="pattern">glider-train</button>
-				<button class="pattern">hammerhead</button>
-				<button class="pattern">lobster</button>
-				<button class="pattern">new-gun</button>
-				<button class="pattern">new-gun-2</button>
-				<button class="pattern">pentadecathlon-synthesis</button>
-				<button class="pattern">pufferfish-synthesis</button>
-				<button class="pattern">pulsar</button>
-				<button class="pattern">ring-of-fire</button>
-				<button class="pattern">space-rake</button>
-				<button class="pattern">turtle</button>
-				<button class="pattern">vacuum-gun</button>
+				<span id="miscLabel" style="cursor: pointer;">> misc</span>
+				<div id="misc">
+					<button class="pattern" value="misc/101">101</button>
+					<button class="pattern" value="misc/acorn">acorn</button>
+					<button class="pattern" value="misc/big-glider">big-glider</button>
+					<button class="pattern" value="misc/buckaroo">buckaroo</button>
+					<button class="pattern" value="misc/canada-goose">canada-goose</button>
+					<button class="pattern" value="misc/copperhead">copperhead</button>
+					<button class="pattern" value="misc/fireship">fireship</button>
+					<button class="pattern" value="misc/glider-gun">glider-gun</button>
+					<button class="pattern" value="misc/glider-train">glider-train</button>
+					<button class="pattern" value="misc/hammerhead">hammerhead</button>
+					<button class="pattern" value="misc/lobster">lobster</button>
+					<button class="pattern" value="misc/new-gun">new-gun</button>
+					<button class="pattern" value="misc/new-gun-2">new-gun-2</button>
+					<button class="pattern" value="misc/pentadecathlon-synthesis">pentadecathlon-synthesis</button>
+					<button class="pattern" value="misc/pufferfish-synthesis">pufferfish-synthesis</button>
+					<button class="pattern" value="misc/pulsar">pulsar</button>
+					<button class="pattern" value="misc/ring-of-fire">ring-of-fire</button>
+					<button class="pattern" value="misc/space-rake">space-rake</button>
+					<button class="pattern" value="misc/turtle">turtle</button>
+					<button class="pattern" value="misc/vacuum-gun">vacuum-gun</button>
+				</div>
 				<br />
 
 				<span>
