feat: moar patternz

--- a/public/index.html
+++ b/public/index.html
@@ -136,32 +136,42 @@
 
 				<span id="corderShipsLabel" style="cursor: pointer;">> corder ships</span>
 				<div id="corderShips">
-					<button class="pattern" value="2-engine-cordership">2-engine</button>
-					<button class="pattern" value="3-engine-cordership">3-engine</button>
-					<button class="pattern" value="4-engine-cordership">4-engine</button>
-					<button class="pattern" value="5-engine-cordership">5-engine</button>
+					<button class="pattern" value="cordership/2-engine">2-engine</button>
+					<button class="pattern" value="cordership/3-engine">3-engine</button>
+					<button class="pattern" value="cordership/4-engine">4-engine</button>
+					<button class="pattern" value="cordership/5-engine">5-engine</button>
+					<button class="pattern" value="cordership/6-engine">6-engine</button>
+					<button class="pattern" value="cordership/7-engine">7-engine</button>
+					<button class="pattern" value="cordership/8-engine">8-engine</button>
+					<button class="pattern" value="cordership/10-engine">10-engine</button>
 				</div>
 
 				<span id="miscLabel" style="cursor: pointer;">> misc</span>
 				<div id="misc">
 					<button class="pattern" value="misc/101">101</button>
 					<button class="pattern" value="misc/acorn">acorn</button>
+					<button class="pattern" value="misc/airforce">airforce</button>
 					<button class="pattern" value="misc/big-glider">big-glider</button>
+					<button class="pattern" value="misc/brain">brain</button>
+					<button class="pattern" value="misc/brick-layer">brick-layer</button>
 					<button class="pattern" value="misc/buckaroo">buckaroo</button>
 					<button class="pattern" value="misc/canada-goose">canada-goose</button>
+					<button class="pattern" value="misc/canada-grey">canada-grey</button>
 					<button class="pattern" value="misc/copperhead">copperhead</button>
+					<button class="pattern" value="misc/crown">crown</button>
 					<button class="pattern" value="misc/fireship">fireship</button>
-					<button class="pattern" value="misc/glider-gun">glider-gun</button>
 					<button class="pattern" value="misc/glider-train">glider-train</button>
 					<button class="pattern" value="misc/hammerhead">hammerhead</button>
 					<button class="pattern" value="misc/lobster">lobster</button>
 					<button class="pattern" value="misc/new-gun">new-gun</button>
 					<button class="pattern" value="misc/new-gun-2">new-gun-2</button>
+					<button class="pattern" value="misc/noahs-ark">noahs-ark</button>
 					<button class="pattern" value="misc/pentadecathlon-synthesis">pentadecathlon-synthesis</button>
 					<button class="pattern" value="misc/pufferfish-synthesis">pufferfish-synthesis</button>
 					<button class="pattern" value="misc/pulsar">pulsar</button>
 					<button class="pattern" value="misc/ring-of-fire">ring-of-fire</button>
 					<button class="pattern" value="misc/space-rake">space-rake</button>
+					<button class="pattern" value="misc/spider">spider</button>
 					<button class="pattern" value="misc/turtle">turtle</button>
 					<button class="pattern" value="misc/vacuum-gun">vacuum-gun</button>
 				</div>
