feat: more glider guns

--- a/public/index.html
+++ b/public/index.html
@@ -115,22 +115,33 @@
 				<span id="gliderGunsLabel" style="cursor: pointer;">> glider guns</span>
 				<div id="gliderGuns">
 					<button class="pattern" value="glidergun/period-14">period 14</button>
+					<button class="pattern" value="glidergun/period-15">period 15</button>
+					<button class="pattern" value="glidergun/period-16">period 16</button>
+					<button class="pattern" value="glidergun/period-18">period 18</button>
 					<button class="pattern" value="glidergun/period-20">period 20</button>
 					<button class="pattern" value="glidergun/period-22">period 22</button>
 					<button class="pattern" value="glidergun/period-24">period 24</button>
+					<button class="pattern" value="glidergun/period-25">period 25</button>
 					<button class="pattern" value="glidergun/period-28">period 28</button>
 					<button class="pattern" value="glidergun/period-30-gosper">period 30 (gosper)</button>
 					<button class="pattern" value="glidergun/period-33">period 33</button>
 					<button class="pattern" value="glidergun/period-36">period 36</button>
+					<button class="pattern" value="glidergun/period-40">period 40</button>
 					<button class="pattern" value="glidergun/period-44">period 44</button>
 					<button class="pattern" value="glidergun/period-48">period 48</button>
 					<button class="pattern" value="glidergun/period-50">period 50</button>
 					<button class="pattern" value="glidergun/period-60">period 60</button>
+					<button class="pattern" value="glidergun/period-70">period 70</button>
+					<button class="pattern" value="glidergun/period-80">period 80</button>
 					<button class="pattern" value="glidergun/period-90">period 90</button>
 					<button class="pattern" value="glidergun/period-92">period 92</button>
+					<button class="pattern" value="glidergun/period-100">period 100</button>
+					<button class="pattern" value="glidergun/period-120">period 120</button>
 					<button class="pattern" value="glidergun/period-144">period 144</button>
 					<button class="pattern" value="glidergun/period-156-8-barrel">period-156 (8-barrel)</button>
+					<button class="pattern" value="glidergun/period-200">period 200</button>
 					<button class="pattern" value="glidergun/period-256">period 256</button>
+					<button class="pattern" value="glidergun/period-300">period 300</button>
 					<button class="pattern" value="glidergun/period-690">period 690</button>
 				</div>
 
